# rust-actix-vue

./: .env  Cargo.toml  README.md
frontend/: .gitignore  package.json
frontend/pages/: about.vue  index.vue
src/: handlers.rs  main.rs
src/routes/: test.rs
