[package]
name = "rust-actix-svelte"
version = "0.1.0"
authors = ["Marius Reimer <reime005@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix = "0.11.1"
actix-web = "3.3.2"
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-rt = "2.1.0"
env_logger = "0.8"
log = "0.4.0"
serde = "1.0.103"
serde_json = "1.0.61"
serde_derive = "1.0.103"
derive_more = "0.99.11"
tracing = "0.1"
tracing-subscriber = "0.2.0"
kv-log-macro = "1.0.7"
tracing-log = "0.1.2"
tracing-actix-web = "0.2.1"
